# mLLM

./: .gitignore  CMakeLists.txt  LICENSE  export_onnx.py  readme.md  requirements.txt  venv.bat  venv_test.bat
scripts/: download_model.py  export_qwen3_parity.py  regression_test.py  test_qwen3_parity.py  tokenizer_helper.py  tokenizer_parity_test.py  verify_full_forward.py
src/: main.cpp  pch.h
src/core/runtime/: Attention.h  EmbeddingLookup.h  KVCache.h  Linear.h  MLP.h  RMSNorm.h  RoPE.h  Sampler.cpp  Sampler.h  TransformerBlock.h
src/debug/: TensorCompare.h
src/models/base/: GenerateOptions.h  GenerateResult.h  ImodelRunner.h  ModelConfigLoader.h  ModelRunnerFactory.h  ModelSpec.h  ModelType.h  SafeTensorHeaderParser.h  SafeTensorLoader.h  SafeTensorTensorLoader.h
src/models/llama/: LlamaRunner.cpp  LlamaRunner.h
src/models/qwen/: QwenRunner.cpp  QwenRunner.h
src/serving/: GenerationRequest.h  HttpServer.cpp  HttpServer.h  RequestQueue.h  Scheduler.cpp  Scheduler.h
src/tokenizer/: BpeTokenizer.cpp  BpeTokenizer.h  ITokenizer.h  LlamaTokenizer.cpp  LlamaTokenizer.h  QwenTokenizer.cpp  QwenTokenizer.h  TokenizerJsonLoader.cpp  TokenizerJsonLoader.h
